# TradingBot

./: ARCHITECTURE.md  AgentOrderTracker.h  CHANGELOG.md  CONTRIBUTING.md  Makefile  MarketSimulator.cpp  MarketSimulator.h  OrderBook.cpp  OrderBook.h  README.md  __init__.py  action_proto.py  adv_store.py  agg_klines.py  aggregate_exec_logs.py  app.py  apply_calibrator.py  apply_no_trade_mask.py  backtest_adapter.py  base.py  binance_fee_refresh.py  binance_filters.json  binance_public.py  binance_ws.py  build_adv.py  build_adv_base.py  build_training_table.py  calibrate_slippage.py  calibrate_tcost.py  check_drift.py  check_feature_parity.py  check_imports.py  clock.py  compat_shims.py  config.py  core_config.py  core_constants.pxd  core_constants.py  core_contracts.py  core_models.py  (+123 more)
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: dependency-check.yml
adapters/: binance_spot_private.py
api/: config.py  spot_signals.py
benchmarks/: simulator_seasonality_bench.py
configs/: config_eval.yaml  config_live.yaml  config_sim.yaml  config_template.yaml  config_train.yaml  execution.yaml  fees.yaml  legacy_realtime.yaml  legacy_sandbox.yaml  legacy_sim.yaml  liquidity_latency_seasonality.json  monitoring.yaml  no_trade.yaml  offline.yaml  ops.yaml  quantizer.yaml  runtime.yaml  signals.yaml  slippage.yaml  state.yaml  timing.yaml
data/: binance_filters.json  symbol_specs.json
data/fees/: README.md  fees_by_symbol.json
data/latency/: README.md
data/liquidity/: adv_base.json  adv_quote.json
data/maintenance/: example_schedule.json
data/seasonality_source/: README.md
data/slippage/: hourly_profile.sample.json
data/train/: btcusdt_sample.csv
data/universe/: symbols.json
docs/: bar_execution.md  data_degradation.md  dynamic_spread.md  no_trade.md  parallel.md  pipeline.md  seasonality.md  seasonality_QA.md  seasonality_api.md  seasonality_data_policy.md  seasonality_example.md  seasonality_migration.md  seasonality_quickstart.md  spot_signal_delta_weight.schema.json  spot_signal_envelope.schema.json  spot_signal_target_weight.schema.json  universe.md
docs/codex/: README.md
domain/: __init__.py  adapters.py
include/: latency_queue.h
sandbox/: backtest_adapter.py  sim_adapter.py
scripts/: build_adv.py  build_adv_base.py  build_hourly_seasonality.py  build_spread_seasonality.py  calibrate_dynamic_spread.py  calibrate_live_slippage.py  cron_update_seasonality.sh  edit_multiplier.py  extract_liquidity_seasonality.py  fetch_binance_filters.py  offline_utils.py  plot_seasonality.py  refresh_fees.py  refresh_universe.py  run_full_cycle.py  seasonality_dashboard.py  sim_reality_check.py  smoke_check_action_wrapper.py  validate_regime_distributions.py  validate_seasonality.py
services/: alerts.py  costs.py  event_bus.py  metrics.py  monitoring.py  ops_kill_switch.py  rest_budget.py  shutdown.py  signal_bus.py  signal_csv_writer.py  state_storage.py  universe.py  utils_app.py  utils_sandbox.py
state/: .gitignore
strategies/: __init__.py  base.py  momentum.py
tests/: conftest.py  fast_lob.py  pnl_report_check.py  run_no_trade_mask_sample.py  test_adv_store.py  test_agg_klines_validation.py  test_aggregate_exec_logs_bar_mode.py  test_apply_no_trade_mask.py  test_bar_backtest_bridge_timing.py  test_bar_executor.py  test_binance_public_close_timestamp.py  test_clock_sync_config.py  test_close_shift.py  test_common_run_config_sections.py  test_daily_turnover_limits.py  test_degradation_logging.py  test_domain_adapters.py  test_execution_bar_capacity_base.py  test_execution_determinism.py  test_execution_profile_logging_and_metrics.py  test_execution_profiles.py  test_execution_rules.py  test_execution_sim_bnb_fee_conversion.py  test_execution_sim_fee_discount.py  test_execution_sim_intrabar_slippage.py  test_execution_sim_pnl_tolerance.py  test_execution_sim_symbol_filter.py  test_exposure_state.py  test_feature_pipe_metrics.py  test_fees_account_info.py  test_fees_discount.py  test_fees_rounding.py  test_fetch_all_data_patch.py  test_hour_of_week.py  test_latency_seasonality.py  test_latency_validation.py  test_latency_volatility.py  test_leak_guard_env.py  test_limit_order_ttl.py  test_liquidity_seasonality.py  (+44 more)
tests/backtest/: test_bar_backtest_bridge.py
tests/data/: test_adv_store.py
tests/env/: test_trading_env_intrabar.py  test_trading_intrabar.py
tests/execution/: test_bar_executor_instructions.py  test_intrabar_pricing.py
tests/features/: test_feature_pipe_costs.py
tests/monitoring/: test_bar_execution_snapshot.py
tests/utils/: test_utils_time.py
utils/: __init__.py  prometheus.py  rate_limiter.py  time.py
wrappers/: __init__.py  action_space.py
